# wrapper_package

./: .gitignore  LICENSE  README.md  setup.cfg
src/example_package_wrapper_senchurov.egg-info/: PKG-INFO  SOURCES.txt
src/wrapper_package/: __init__.py  wrapper.py
tests/: test_wrapper.py
