[metadata]
name = wrapper_package-senchurov
version = 0.0.1
author = "Sergii Senchurov"
author_email = sergii.senchurov@gmail.com
description = "Wrapper package example"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SergiiSenchurov/wrapper_package.git
project_urls =
    Bug Tracker = https://github.com/SergiiSenchurov/wrapper_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src